# tpch-query5-implementation

./: .gitignore  CMakeLists.txt  README.md
results/: four.txt
src/: main.cpp  query5.cpp
